Update frontend and add post image controllers

--- a/_colors.scss
+++ b/_colors.scss
@@ -7,15 +7,15 @@ $colors: (
         "main": #0f9fff,
         "accent": #F05454,
         "shade-0": #0b0e10,
-        "shade-1": #161c20,
-        "shade-2": #20292f,
-        "shade-3": #2b373f,
-        "shade-4": #36454f,
-        "shade-5": #596270,
-        "shade-6": #c9c9c9,
-        "shade-7": #efefef,
-        "shade-8": #f7f7f7,
-        "shade-9": #ffffff
+        "shade-1": hsl(204, 10%, 11%),
+        "shade-2": hsl(204, 10%, 15%),
+        "shade-3": hsl(204, 10%, 19%),
+        "shade-4": hsl(204, 10%, 26%),
+        "shade-5": hsl(204, 10%, 35%),
+        "shade-6": hsl(204, 10%, 79%),
+        "shade-7": hsl(204, 10%, 94%),
+        "shade-8": hsl(204, 10%, 97%),
+        "shade-9": hsl(204, 10%, 100%)
 );
 
 
