--- a/_typography.scss
+++ b/_typography.scss
@@ -20,7 +20,7 @@ html {
 
 ::selection {
     color: var(--scheme-background);
-    background-color: var(--color-main);
+    background-color: var(--scheme-main);
 }
 
 a {
