--- a/elements/_input-text.scss
+++ b/elements/_input-text.scss
@@ -2,7 +2,7 @@
     --input-text-bg: var(--scheme-background);
     --input-text-color: var(--scheme-foreground);
     --input-text-border-color: var(--scheme-shade-6);
-    --input-text-placeholder-color: var(--input-text-border-color);
+    --input-text-placeholder-color: var(--scheme-shade-6);
     --input-text-padding: calc(var(--spacer) * 0.75);
     --input-text-border-width: var(--border-width);
     --input-text-border-radius: var(--border-radius);
