--- a/_sizes.scss
+++ b/_sizes.scss
@@ -1,8 +1,6 @@
 
-// Header for sizing
-
 :root {
     --spacer: 0.8rem;
     --border-width: 2px;
-    --border-radius: 8px;
+    --radius: 8px;
 }
