--- a/elements/_input-text.scss
+++ b/elements/_input-text.scss
@@ -5,7 +5,7 @@
     --input-text-placeholder-color: var(--scheme-shade-6);
     --input-text-padding: calc(var(--spacer) * 0.75);
     --input-text-border-width: var(--border-width);
-    --input-text-border-radius: var(--border-radius);
+    --input-text-border-radius: var(--radius);
     --input-text-focus-border-color: var(--scheme-main);
 }
 
