--- a/elements/_input-check.scss
+++ b/elements/_input-check.scss
@@ -4,7 +4,8 @@ input[type=checkbox].input-check {
   --input-check-border-width: calc(var(--border-width));
   --input-check-color: var(--scheme-main);
   --input-check-tick-color: var(--scheme-main);
-  --input-check-corner-radius: calc(var(--border-radius) * 0.5);
+  --input-check-corner-radius: calc(var(--radius) * 0.5);
+  --input-check-icon: var(--icon-xmark);
 
   width: var(--input-check-size);
   height: var(--input-check-size);
@@ -35,8 +36,10 @@ input[type=checkbox].input-check {
   }
   &:checked::before {
     background-color: var(--input-check-color);
-    //background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" style="fill:#030104;" d="M16.145,2.571c-0.272-0.273-0.718-0.273-0.99,0L6.92,10.804l-4.241-4.27 c-0.272-0.274-0.715-0.274-0.989,0L0.204,8.019c-0.272,0.271-0.272,0.717,0,0.99l6.217,6.258c0.272,0.271,0.715,0.271,0.99,0 L17.63,5.047c0.276-0.273,0.276-0.72,0-0.994L16.145,2.571z"/></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>');
-    background-image: url("https://www.svgrepo.com/show/169312/check-mark.svg");
+    background-image: var(--input-check-icon);
+    background-repeat: no-repeat;
+    background-position: center;
+    //background-image: url("https://www.svgrepo.com/show/169312/check-mark.svg");
   }
 
   &:focus,
