Update the way the checkmark icon work on checkboxes

--- a/elements/_input-check.scss
+++ b/elements/_input-check.scss
@@ -3,9 +3,9 @@ input[type=checkbox].input-check {
   --input-check-size: 1.25em;
   --input-check-border-width: calc(var(--border-width));
   --input-check-color: var(--scheme-main);
-  --input-check-tick-color: var(--scheme-main);
+  --input-check-tick-color: var(--scheme-background);
   --input-check-corner-radius: calc(var(--radius) * 0.5);
-  --input-check-icon: var(--icon-xmark);
+  --input-check-cutout: var(--cutout-checkmark);
 
   width: var(--input-check-size);
   height: var(--input-check-size);
@@ -21,25 +21,21 @@ input[type=checkbox].input-check {
     position: absolute;
     
     user-select: none;
+    cursor: pointer;
 
     left: 0;
     top: calc(var(--input-check-size) * 0.175);
 
     width: calc(var(--input-check-size) - var(--input-check-border-width) * 2);
     height: calc(var(--input-check-size) - var(--input-check-border-width) * 2);
-    
-    border: var(--input-check-border-width) solid var(--input-check-color);
 
+    border: var(--input-check-border-width) solid var(--input-check-color);
     border-radius: var(--input-check-corner-radius);
-    
-    cursor: pointer;
+
+    clip-path: var(--input-check-cutout);
   }
   &:checked::before {
     background-color: var(--input-check-color);
-    background-image: var(--input-check-icon);
-    background-repeat: no-repeat;
-    background-position: center;
-    //background-image: url("https://www.svgrepo.com/show/169312/check-mark.svg");
   }
 
   &:focus,
