--- a/_animation.scss
+++ b/_animation.scss
@@ -1,4 +1,6 @@
 :root {
   --transition-duration: 250ms;
   --transition-duration-quick: 100ms;
+
+  --transition-shape-bouncy: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
