--- a/themes/_dark.scss
+++ b/themes/_dark.scss
@@ -1,6 +1,6 @@
 @mixin theme-dark() {
-    --palette-default-main: #0f9fff;
-    --palette-default-main-hover: hsl(204, 100%, 45%);
+    --palette-default-main: hsl(204, 100%, 53%);
+    --palette-default-main-hover: hsl(204, 100%, 61%);
     --palette-default-shade-0: hsl(204, 10%, 100%);
     --palette-default-shade-1: hsl(204, 10%, 92%);
     --palette-default-shade-2: hsl(204, 10%, 80%);
@@ -12,17 +12,17 @@
     --palette-default-shade-8: hsl(204, 10%, 11%);
     --palette-default-shade-9: hsl(204, 10%, 5%);
 
-    --palette-default-control-bg: hsl(204, 10%, 15%);
-    --palette-default-control-hover-bg: hsl(204, 10%, 20%);
+    --palette-default-control-bg: hsl(204, 10%, 20%);
+    --palette-default-control-hover-bg: hsl(204, 10%, 25%);
     --palette-default-control-disabled-bg: hsl(204, 10%, 13%);
 
     --palette-default-surface-0: var(--palette-default-shade-7);
 
     --palette-default-background: var(--palette-default-shade-8);
     --palette-default-foreground: var(--palette-default-shade-1);
+    --palette-default-middleground: var(--palette-default-shade-5);
     --palette-default-text-color: hsl(204, 0%, 95%);
     --palette-default-text-muted-color: hsl(204, 0%, 50%);
-    --palette-default-middleground: var(--palette-default-shade-5);
 
     --palette-default-shadow: hsl(204, 10%, 1%);
 }
