Rename text and checkbox input

--- a/elements/_checkbox.scss
+++ b/elements/_checkbox.scss
@@ -14,7 +14,7 @@
   height: var(--checkbox-size);
 }
 
-input[type=checkbox].input-check {
+input[type=checkbox].checkbox {
   --checkbox-checked-bg: var(--scheme-main);
   --checkbox-checked-hover-bg: var(--scheme-main-hover);
   --checkbox-size: 1.25em;
