Rework project setup

--- a/components/_button.scss
+++ b/components/_button.scss
@@ -93,6 +93,7 @@
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: stretch;
+    width: max-content;
 
     isolation: isolate;
 
