--- a/_typography.scss
+++ b/_typography.scss
@@ -56,6 +56,15 @@ p {
     margin-bottom: var(--spacer);
 }
 
+hr {
+    border: none;
+    border-top: var(--border-width) solid var(--scheme-surface-0);
+}
+
+strong {
+    font-weight: bold;
+}
+
 .text-left {
     text-align: left;
 }
