--- a/_typography.scss
+++ b/_typography.scss
@@ -1,20 +1,30 @@
 
 :root {
-    --font-family-normal: sans-serif;
-    --font-family-monospace: monospace;
-    --font-size: 1.05rem;
+    --ff-default: sans-serif;
+    --ff-mono: monospace;
   
     --heading-color: var(--scheme-foreground);
-    
-    --paragraph-width: 100%;
-  }
-  
+    --anchor-color: var(--scheme-main);
 
-*,
+    --paragraph-width: 100%;
+
+    /* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1240,20,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+
+    --step--2: clamp(0.78rem, calc(0.77rem + 0.03vw), 0.80rem);
+    --step--1: clamp(0.94rem, calc(0.92rem + 0.11vw), 1.00rem);
+    --step-0: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
+    --step-1: clamp(1.35rem, calc(1.28rem + 0.37vw), 1.56rem);
+    --step-2: clamp(1.62rem, calc(1.50rem + 0.58vw), 1.95rem);
+    --step-3: clamp(1.94rem, calc(1.77rem + 0.87vw), 2.44rem);
+    --step-4: clamp(2.33rem, calc(2.08rem + 1.25vw), 3.05rem);
+    --step-5: clamp(2.80rem, calc(2.45rem + 1.77vw), 3.82rem);
+
+}
+
 body, 
 html {
-    font-family: var(--font-family-normal);
-    font-size: var(--font-size);
+    font-family: var(--ff-default);
+    font-size: var(--step-0);
     line-height: 1.2;
 }
 
@@ -24,7 +34,7 @@ html {
 }
 
 a {
-    color: var(--heading-color);
+    color: unset;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -33,36 +43,40 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: calc(var(--font-size) * 3);
+    font-size: var(--step-5);
 }
 h2 {
-    font-size: calc(var(--font-size) * 2);
+    font-size: var(--step-4);
 }
 h3 {
-    font-size: calc(var(--font-size) * 1.75);
+    font-size: var(--step-3);
 }
 h4 {
-    font-size: calc(var(--font-size) * 1.5);
+    font-size: var(--step-2);
 }
 h5 {
-    font-size: calc(var(--font-size) * 1.3);
+    font-size: var(--step-1);
 }
 h6 {
-    font-size: var(--font-size);
+    font-size: var(--step-0);
 }
 
 p {
     max-width: var(--paragraph-width);
-    margin-bottom: var(--spacer);
+    margin-bottom: var(--space-s);
 }
 
 hr {
     border: none;
-    border-top: var(--border-width) solid var(--scheme-surface-0);
+    border-top: var(--stroke) solid var(--scheme-surface-0);
 }
 
 strong {
     font-weight: bold;
+}
+
+em {
+    font-style: italic;
 }
 
 .text-left {
@@ -79,4 +93,8 @@ strong {
 
 .text-muted {
     color: var(--scheme-text-muted-color);
+}
+
+.text-small {
+    font-size: var(--step--1);
 }
