--- a/components/_button.scss
+++ b/components/_button.scss
@@ -2,11 +2,11 @@
 
     /* Size settings */
     --btn-border-radius: var(--radius);
-    --btn-font-size: calc(var(--font-size));
+    --btn-font-size: var(--step-0);
     --btn-focus-outline-width: var(--btn-border-width);
     --btn-focus-outline-offset: var(--btn-focus-outline-width);
-    --btn-padding-vertical: calc(var(--spacer) * 0.75);
-    --btn-padding-horizontal: calc(var(--spacer) * 1.5);
+    --btn-padding-vertical: var(--space-2xs);
+    --btn-padding-horizontal: var(--space-xs);
     --btn-press-dip: 2px;
 
     /* Apply colors */
@@ -71,9 +71,9 @@
     // ================
     
     &.btn-sm {
-        --btn-font-size: calc(var(--font-size) * 0.75);
-        --btn-padding-vertical: calc(var(--spacer) * 0.5);
-        --btn-padding-horizontal: calc(var(--spacer) * 1);
+        --btn-font-size: var(--step--1);
+        --btn-padding-vertical: var(--space-3xs);
+        --btn-padding-horizontal: var(--space-2xs);
     }
     
     &.btn-inline {
